primary button text alignment fix

--- a/src/reusable-components/buttons/buttons.scss
+++ b/src/reusable-components/buttons/buttons.scss
@@ -43,14 +43,15 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex: 1;
   }
   .primary-text {
-    flex: 1.5;
-    align-items: flex-end;
+    &.has-secondary {
+      align-items: flex-end;
+    }
   }
   .secondary-text {
-    flex: 1;
-    align-items: center;
     font-size: 1.4vh;
   }
   transition: all .25s ease-in-out; 
